--- a/PiscineN2Wt/templates/base.html
+++ b/PiscineN2Wt/templates/base.html
@@ -5,33 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>{% block title %}LIGUE A{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand {% if request.path == 'home/' %}active{% endif %}" href="{% url 'home/' %}">Foot blog</a>
+                
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact/' %}">contacts</a>
+                    <a class="nav-link" href="{% url 'contact' %}">contacts</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog/' %}">blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login/' %}">login</a>
-                </li>
+                
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="get">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+           
         </div>
     </nav>
 </header>
+
+{% block content %}
+
+{% endblock %}
+
+<footer class="page-footer font-small blue">
+    <div class="footer-copyright text-center py-3">
+        © {% now "Y" %} Copyright:
+        <a href="{% url 'home' %}">Foot blog</a>
+    </div>
+</footer>
+
 </body>
 </html>
