--- a/PiscineN2Wt/templates/base.html
+++ b/PiscineN2Wt/templates/base.html
@@ -20,7 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contact' %}">contacts</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog' %}">blog</a>
+                </li>
             </ul>
            
         </div>
