--- a/PiscineN2Wt/templates/base.html
+++ b/PiscineN2Wt/templates/base.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="{% url 'contact' %}">contacts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog' %}">blog</a>
+                    <a class="nav-link" href="{% url 'mon_repertoire' %}">blog</a>
                 </li>
             </ul>
            
