change templates blog

--- a/PiscineN2Wt/blog/templates/blog/formulaire.html
+++ b/PiscineN2Wt/blog/templates/blog/formulaire.html
@@ -1,3 +1,5 @@
+{% extends "base.html"%}
+{% block content %}
 <form action="" method="post">
     {% csrf_token %} 
     <p>{{ formulaire.as_p }}</p>
@@ -5,3 +7,4 @@
     <button>Soumettre mon article</button>
 </form>
 {{message}}
+{% endblock %}
