--- a/PiscineN2Wt/blog/templates/blog/article.html
+++ b/PiscineN2Wt/blog/templates/blog/article.html
@@ -1,4 +1,4 @@
-{% extends "principal.html"%}
+{% extends "base.html"%}
 {% block content %}
     {% if article %} 
         <h1>{{article.title}}</h1><br>
