--- a/PiscineN2Wt/templates/base.html
+++ b/PiscineN2Wt/templates/base.html
@@ -24,7 +24,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contact' %}">contacts</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">login</a>
+                </li>
+               
             </ul>
            
         </div>
