--- a/PiscineN2Wt/templates/home/home.html
+++ b/PiscineN2Wt/templates/home/home.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 
-    <h1> vous êtes sur la page d'accueille</h1>
+    <h1> vous êtes sur la page d'accueil</h1>
   
   {% endblock %}
